BC-523 | Addressing comments - view tests additional fields