@@ -6,9 +6,11 @@ import static org.mockito.Mockito.when;
 import static uk.gov.justice.laa.bulkclaim.constants.SessionConstants.CLAIM_ID;
 import static uk.gov.justice.laa.bulkclaim.constants.SessionConstants.SUBMISSION_ID;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -77,21 +79,50 @@ class ClaimDetailCrimeLowerViewTest extends ViewTestBase {
     details.setCaseConcludedDate("2025-02-01");
     details.setEscapeCase(true);
     details.setAreaOfLaw(AreaOfLaw.CRIME_LOWER);
-    ClaimFieldRow emptyField = new ClaimFieldRow(null, null, null);
-    details.setFixedFee(emptyField);
-    details.setProfitCosts(emptyField);
-    details.setDisbursements(emptyField);
-    details.setDisbursementsVat(emptyField);
-    details.setVat(emptyField);
-    details.setTotalVat(emptyField);
-    details.setTotalIncludingVat(emptyField);
-    details.setTravelCosts(emptyField);
-    details.setWaitingCosts(emptyField);
+    details.setFixedFee(valueRow(100));
+    details.setProfitCosts(valueRow(110));
+    details.setDisbursements(valueRow(120));
+    details.setDisbursementsVat(valueRow(130));
+    details.setVat(valueRow(160));
+    details.setTotalVat(valueRow(300));
+    details.setTotalIncludingVat(valueRow(310));
+    details.setTravelCosts(valueRow(140));
+    details.setWaitingCosts(valueRow(150));
 
     when(dataClaimsRestClient.getClaimHistory(eq(claimId)))
         .thenReturn(Mono.just(ClaimHistoryResultSet.builder().events(List.of()).build()));
     when(submissionMessagesBuilder.buildAllWarnings(submissionId, claimId))
         .thenReturn(MessagesSummary.builder().messages(List.of()).build());
+  }
+
+  /** Builds a ClaimFieldRow with distinct reported/initialCalculated/assessed values. */
+  private static ClaimFieldRow valueRow(int base) {
+    return new ClaimFieldRow(
+        BigDecimal.valueOf(base), BigDecimal.valueOf(base + 1), BigDecimal.valueOf(base + 2));
+  }
+
+  private static String currency(int amount) {
+    return "£%d.00".formatted(amount);
+  }
+
+  private void assertAllThreeValueColumnsPopulated(List<List<Element>> values) {
+    assertRowContainsValues(
+        values.get(1), "Fixed fee", currency(100), currency(101), currency(102));
+    assertRowContainsValues(
+        values.get(2), "Profit costs (excluding VAT)", currency(110), currency(111), currency(112));
+    assertRowContainsValues(
+        values.get(3),
+        "Disbursements (excluding VAT)",
+        currency(120),
+        currency(121),
+        currency(122));
+    assertRowContainsValues(
+        values.get(4), "Disbursement VAT", currency(130), currency(131), currency(132));
+    assertRowContainsValues(
+        values.get(5), "Travel costs", currency(140), currency(141), currency(142));
+    assertRowContainsValues(
+        values.get(6), "Waiting costs", currency(150), currency(151), currency(152));
+    assertRowContainsValues(values.get(7), "VAT", currency(160), currency(161), currency(162));
   }
 
   private void stubClaim(
@@ -123,11 +154,32 @@ class ClaimDetailCrimeLowerViewTest extends ViewTestBase {
     assertThat(doc.getElementById("claim-status-banner")).isNull();
 
     var summary = getSummaryListInCard(doc, "Summary");
-    assertRowContainsValues(summary.getFirst(), "Client name", "K Will");
+    assertRowContainsValues(summary.get(0), "Client name", "K Will");
+    assertRowContainsValues(summary.get(1), "Unique file number (UFN)", "271219/000");
+    assertRowContainsValues(summary.get(2), "Office account number", "ABC123");
+    assertRowContainsValues(summary.get(3), "Date submitted", "Not applicable");
+    assertRowContainsValues(summary.get(4), "Area of law", "CRIME LOWER");
+    assertRowContainsValues(summary.get(5), "Fee code", "INVC");
+    assertRowContainsValues(summary.get(6), "Fee code description", "Police station: attendance");
+    assertRowContainsValues(summary.get(7), "Matter type", "INVC");
+    assertRowContainsValues(summary.get(8), "Representation order date", "2025-02-10");
+    assertRowContainsValues(summary.get(9), "Stage reached", "INVC");
+    assertRowContainsValues(summary.get(10), "Outcome code", "CN01");
+    assertRowContainsValues(summary.get(11), "Date of work concluded", "2025-02-01");
+    assertRowContainsValues(summary.get(12), "Escape case", "Yes");
 
     var values = getSummaryListInCard(doc, "Values");
-    // header row + 1 data row; current calculated column absent (2 values, not 3)
+    // Just two columns of values + label, current calculated should be hidden
     assertThat(values.getFirst()).hasSize(3);
+    assertRowContainsValues(values.get(1), "Fixed fee", currency(100), currency(101));
+    assertRowContainsValues(
+        values.get(2), "Profit costs (excluding VAT)", currency(110), currency(111));
+    assertRowContainsValues(
+        values.get(3), "Disbursements (excluding VAT)", currency(120), currency(121));
+    assertRowContainsValues(values.get(4), "Disbursement VAT", currency(130), currency(131));
+    assertRowContainsValues(values.get(5), "Travel costs", currency(140), currency(141));
+    assertRowContainsValues(values.get(6), "Waiting costs", currency(150), currency(151));
+    assertRowContainsValues(values.get(7), "VAT", currency(160), currency(161));
   }
 
   @Test
@@ -145,6 +197,7 @@ class ClaimDetailCrimeLowerViewTest extends ViewTestBase {
 
     var values = getSummaryListInCard(doc, "Values");
     assertThat(values.getFirst()).hasSize(4);
+    assertAllThreeValueColumnsPopulated(values);
   }
 
   @Test
@@ -161,8 +214,15 @@ class ClaimDetailCrimeLowerViewTest extends ViewTestBase {
     assertThat(doc.getElementById("claim-status-banner").text())
         .contains("This claim has been Assessed Last edited on 02/02/2026 at 11:00");
 
+    var values = getSummaryListInCard(doc, "Values");
+    assertAllThreeValueColumnsPopulated(values);
+
     var totals = getSummaryListInCard(doc, "Total allowed value");
     assertThat(totals.getFirst()).hasSize(4);
+    assertRowContainsValues(
+        totals.get(1), "Total VAT", currency(300), currency(301), currency(302));
+    assertRowContainsValues(
+        totals.get(2), "Total including VAT", currency(310), currency(311), currency(312));
   }
 
   @Test
